# adventofcode2022

./: README.md
day01/: day1.cabal
day01/src/: Task2Lib.hs
day02/: day2.cabal
day02/src/: Task2Lib.hs  UtilLib.hs
day03/: day3.cabal
day03/src/: Task1Lib.hs  Task2Lib.hs
day04/: day4.cabal
day04/src/: Task1Lib.hs
day05/: day5.cabal
day05/src/: Task2Lib.hs
day06/: day6.cabal
day06/src/: Task2Lib.hs
day07/: day7.cabal
day08/: day8.cabal
day08/src/: Task2Lib.hs
day09/: day9.cabal
day09/app/: Main.hs
day09/src/: Task1Lib.hs  Task2Lib.hs
day1/: day1.cabal
day1/src/: Task1Lib.hs
day10/: day10.cabal
day10/src/: Task1Lib.hs  Task2Lib.hs
day11/: day11.cabal
day11/src/: Task1Lib.hs  UtilLib.hs
day12/: day12.cabal
day12/src/: Task2Lib.hs
day13/: day13.cabal
day13/src/: Task1Lib.hs  Task2Lib.hs
day14/: day14.cabal
day14/src/: Task1Lib.hs  Task2Lib.hs
day15/: day15.cabal
day15/src/: Task1Lib.hs  Task2Lib.hs
day16/: day16.cabal
day16/src/: Task1Lib.hs  Task2Lib.hs
day17/: day17.cabal
day17/src/: Task1Lib.hs  Task2Lib.hs
day18/: day18.cabal
day18/src/: Task1Lib.hs  Task2Lib.hs
day19/: day19.cabal
day19/src/: Task1Lib.hs  Task2Lib.hs  UtilLib.hs
day2/: day2.cabal
day2/app/: Main.hs
day2/src/: Task1Lib.hs
day20/: day20.cabal
day20/app/: Main.hs
day20/src/: Task1Lib.hs  Task2Lib.hs
day21/: day21.cabal
day21/src/: Task1Lib.hs  Task2Lib.hs
day3/: day3.cabal
day3/src/: UtilLib.hs
day4/: day4.cabal
day5/: day5.cabal
day6/: day6.cabal
day7/: day7.cabal
day8/: day8.cabal
day9/: day9.cabal
(+8 files in other folders)
